--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-39080113-2', 'auto');
+  ga('require', 'displayfeatures');
   ga('send', 'pageview');
 
 </script>
