--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 </head>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<img src="http://latex.codecogs.com/svg.latex?d(\text{Content}_{t_0}, \text{Content}_{t_1}) > \epsilon  " border="0"/ align="center">
 </body>
 </html>
