--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </head>
 <html>
 <body>
+<center>
 <img src="http://latex.codecogs.com/svg.latex?d(\text{Content}_{t_0}, \text{Content}_{t_1}) > \epsilon  " border="0"/ align="center">
+</center>
+  
 </body>
 </html>
