--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
 </head>
 <html>
 <body>
-<center>
-<img src="http://latex.codecogs.com/svg.latex?d(\text{Content}_{t_0}, \text{Content}_{t_1}) > \epsilon  " border="0"/ align="center">
-</center>
-  
+<img src="http://latex.codecogs.com/svg.latex?d(\text{Content}_{t_0}, \text{Content}_{t_1}) > \epsilon  " border="0" align="center">
 </body>
 </html>
