--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 </head>
 <html>
 <body>
-<img src="http://latex.codecogs.com/svg.latex?d(\text{Content}_{t_0}, \text{Content}_{t_1}) > \epsilon  " border="0" align="center">
+<img src="http://latex.codecogs.com/svg.latex?d(\text{Content}_{t_0}, \text{Content}_{t_1}) > \epsilon  " border="0" style="align:center">
 </body>
 </html>
