--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 
 </script>
 
+<style>
 html { 
    width:100%; 
    height:100%; 
    background:<img src="http://latex.codecogs.com/svg.latex?d(\text{Content}_{t_0}, \text{Content}_{t_1}) > \epsilon  " border="0" style="text-align:center"/> center center no-repeat;
 }
+</style>
 
 </head>
 <html>
